main functionality done

--- a/site/index.html
+++ b/site/index.html
@@ -9,5 +9,9 @@
   </head>
   <body>
     hola
+
+    <a href="/home/fernaned/Documentos/Proyectos/blog_ssg/site/posts/00-hello.html">primerpost</a>
+
+    <a href="/home/fernaned/Documentos/Proyectos/blog_ssg/site/posts/ayer/joder.html">segundo</a>
   </body>
 </html>
