added relative paths to site output

--- a/site/index.html
+++ b/site/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/home/fernaned/Documentos/Proyectos/blog_ssg/site/stylesheets/style.css" />
+    <link rel="stylesheet" href="./stylesheets/style.css" />
     <title>Document</title>
   </head>
   <body>
-    hola
+    eo
 
-    <a href="/home/fernaned/Documentos/Proyectos/blog_ssg/site/posts/00-hello.html">primerpost</a>
+    <a href="ooo/aaa.html">otro link</a>
 
-    <a href="/home/fernaned/Documentos/Proyectos/blog_ssg/site/posts/ayer/joder.html">segundo</a>
+    <a href="posts/00-hello.html">primerpost</a>
   </body>
 </html>
