--- a/site/ooo/aaa.html
+++ b/site/ooo/aaa.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="%__PUBLIC__%/stylesheets/style.css" />
+    <link rel="stylesheet" href="../stylesheets/style.css" />
     <title>Document</title>
   </head>
   <body>
-    eo
-
-    <a href="ooo/aaa.html">otro link</a>
-
-    <a href="%__POSTS__%/00-hello.html">primerpost</a>
+    otro post xd
+    <a href="../posts/ayer/joder.html">segundo</a>
   </body>
 </html>
