failed attemp to make local server w/ hotreload

--- a/site/ooo/aaa.html
+++ b/site/ooo/aaa.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    otro post xd
+    como estas
     <a href="../posts/ayer/joder.html">segundo</a>
   </body>
 </html>
