--- a/site/index.html
+++ b/site/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./stylesheets/style.css" />
+    <link rel="stylesheet" href="./stylesheets/reset-style.css" />
+    <link rel="stylesheet" href="./stylesheets/main-style.css" />
     <title>Document</title>
   </head>
   <body>
     eo
 
+    <button id="change-theme-btn" class="btn btn-primary">Change theme</button>
+
     <a href="ooo/aaa.html">otro link</a>
 
     <a href="posts/00-hello.html">primerpost</a>
+
+    <script src="./scripts/changeTheme.js"></script>
   </body>
 </html>
